<?xml version="1.0"?>
<package format="3">
  <name>wj_716n_lidar</name>
  <version>0.1.0</version>
  <description>ROS 2 package for Wanji 716 Mini Lidar</description>

  <!-- Maintainer tag -->
  <maintainer email="emopointer@foxmail.com">zhouzhiqiang</maintainer>

  <!-- License tag -->
  <license>Apache 2.0</license>

  <!-- Author tag -->
  <author>zhouzhiqiang</author>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Declare runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>

  <!-- Optional dependencies (if needed for your package) -->
  <!-- <depend>tf2</depend> -->
  <!-- <depend>tf2_ros</depend> -->
  <!-- <depend>tf2_geometry_msgs</depend> -->
  <!-- <depend>tf2_sensor_msgs</depend> -->

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
